[project]
name = "midden"
version = "0.1.0"
description = "A simple heap analysis and visualization tool."
readme = "README.md"
authors = [
    { name = "James Pickering", email = "james.pickering@airelogic.com" },
]
requires-python = ">=3.10"

[project.optional-dependencies]
ui = ["flask>=3.1.3", "lmdb>=2.1.1", "pydantic>=2.12.5"]

[project.scripts]
midden-inject = "midden.dump.inject:main"
midden-ui = "midden.wsgi:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.7", "ty>=0.0.24"]
