[project]
name = "midden-root"
version = "0.1.0"
# Use 3.11 for root project so we can use tomllib in helper scripts
requires-python = ">=3.10"
dependencies = [
    "midden",
    "midden-analysis",
    "nox>=2026.4.10",
    "nox-uv>=0.8.0",
    "pytest>=9.0.3",
    "uv>=0.11.15",
]

[tool.uv.sources]
midden = { workspace = true }
midden-analysis = { workspace = true }

[tool.uv.workspace]
members = ["midden", "midden-analysis"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff.lint]
preview = true
ignore = [
    "BLE001", # No blind except is too heavy handed
]
