[package]
name = "midden-analysis"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "midden_analysis"
crate-type = ["cdylib"]

[profile.release]
frame-pointers = "force-on" # Everyone deserves frame pointers
debug = "line-tables-only"
lto = "thin"
strip = false

[dependencies]
float16 = "0.1.5"
heed = "0.22.1"
pyo3-introspection = "0.28.3"
serde = "1.0.228"
serde_json = "1.0.149"

[dependencies.anyhow]
version = "1.0.102"
features = ["backtrace"]

[dependencies.pyo3]
version = "0.28.2"
features = ["abi3-py310", "anyhow"]

[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3"]
