[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "midden-analysis"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    { name = "James Pickering", email = "james.pickering@airelogic.com" },
]
description = "Analysis helpers for Midden, a heap analysis and visualization tool."
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = [
    "maturin-import-hook>=0.3.0",
    "pytest>=8.3.5",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "uv>=0.11.15",
]
