[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "midden-analysis"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
description = "Analysis helpers for Midden, a heap analysis and visualization tool."
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = []
maintainers = [
    { name = "James Pickering", email = "james_pic@hotmail.com" } 
]

[project.urls]
Repository = "https://github.com/jamespic/midden"
Issues = "https://github.com/jamespic/midden/issues"

[dependency-groups]
dev = [
    "maturin-import-hook>=0.3.0",
    "pytest>=8.3.5",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "uv>=0.11.15",
]
