[project]
name = "midden"
version = "0.1.0"
description = "A simple heap analysis and visualization tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "MIT"
maintainers = [
    { name = "James Pickering", email = "james_pic@hotmail.com" } 
]


[project.urls]
Repository = "https://github.com/jamespic/midden"
Issues = "https://github.com/jamespic/midden/issues"

[project.optional-dependencies]
ui = [
    "flask>=3.1.3",
    "psutil>=7.2.2",
    "midden-analysis==0.1.0",
    "cheroot>=11.1.2",
]

[project.scripts]
midden-inject = "midden.dump.inject:main"
midden-ui = "midden.wsgi:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["docker>=7.1.0", "pytest>=9.0.3", "ruff>=0.15.7", "ty>=0.0.24"]

[tool.pytest.ini_options]
markers = [
    "linux: tests that require Linux",
    "min_python(python_ver): tests that require a minimum Python version",
]
